# reciprocity_companion

./: Cargo.toml  Cross.toml  README.md
.cargo/: config
.github/workflows/: mean_bean_ci.yml  mean_bean_deploy.yml
docker/: Dockerfile.aarch64-unknown-linux-musl  Dockerfile.armv7-unknown-linux-musleabihf  Dockerfile.i686-unknown-linux-musl  Dockerfile.x86_64-unknown-linux-musl
src/: config.rs  connection.rs  executor.rs  footer.rs  lib.rs  log.rs  main.rs  player_control.rs
src/icons/: mod.rs
src/tabs/: history.rs  mod.rs  playlist.rs  search.rs  settings.rs
src/theme/: dark.rs  light.rs  mod.rs
src/util/: mod.rs  youtube.rs
