[package]
name = "reciprocity_companion"
version = "0.1.1"
authors = ["Autumnal <friedrich122112@googlemail.com>"]
edition = "2018"

[dependencies]
directories = "^3.0"
cached = "^0.23"
log = "^0.4"
reqwest = {version = "^0.11", default-features = false, features = ["rustls-tls"]}
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "^0.8"
futures = "^0.3"
rmp-serde = "^0.15"

iced_core = "^0.4"
iced_style = "^0.3"
iced_futures = "^0.3"
iced_graphics = "^0.2"
iced_native = "^0.4"
iced_wgpu = "^0.4"
iced = {version = "^0.3", features = ["tokio", "wgpu", "default_system_font", "canvas", "image", "svg", "debug"], default_features = false}

tokio = {version = "^1.5", features = ["rt-multi-thread", "time", "sync", "net"]}
tungstenite = {version = "^0.13", default-features = false, features = ["rustls-tls"]}
async-tungstenite = {version = "^0.13", default-features = false, features = ["tokio-rustls"] }

#reciprocity_communication = {path = "../reciprocity_communication", features = ["client"]}
reciprocity_communication = {git = "https://github.com/Steav005/reciprocity_communication", branch = "master", features = ["client"]}